# pic2text

./: Cargo.toml  README.md
src/: font8x8.rs  main.rs
