[package]
name = "pic2text"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
image = "0.25.9"
font8x8 = { git = "https://github.com/jesper-olsen/font8x8-rs", branch = "master" }

